Beta 2 Release Improved syncing, easy installation, easy networking

--- a/options.html
+++ b/options.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The Little Library</title>
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.css" />
+<link rel="stylesheet" href="jqm.css" />
 <script type="text/javascript" src="json2.js"></script>
 <script type="text/javascript" src="sha1.js"></script>
 <script type="text/javascript" src="jquery.js"></script>
@@ -38,7 +38,7 @@
     
         <ul data-role="listview" data-inset="true">
         	
-            <li><a href="http://www.thelittlelibrary.com/" rel="external" class="findMore">Find More Online</a></li>
+            <!--<li><a href="http://www.thelittlelibrary.com/" rel="external" class="findMore">Find More Online</a></li>-->
             <li><a href="about.html" rel="external" class="about">About</a></li>
             <li><a href="sync.html" rel="external" class="sync">Sync</a></li>
             <li><a href="interface.html" rel="external" class="interface">Interface</a></li>
