Repositioned logout for usability (my wife told me to)
Signed-off-by: Bob Wadholm <rwadholm@indiana.edu>

--- a/login.html
+++ b/login.html
@@ -265,7 +265,7 @@
 														contentType:"application/json",
 														error: function(){
 															alert(libLang.noSyncOnline); // Get text for language
-															window.location.replace("login.html");
+															window.location.replace("index.html");
 														}
 													});
 													
@@ -278,11 +278,11 @@
 														contentType:"application/json",
 														success: function(){
 															alert(libLang.createSync); // Get text for language
-															window.location.replace("login.html");
+															window.location.replace("index.html");
 														},
 														error: function(){
 															alert(libLang.noSyncOnline); // Get text for language
-															window.location.replace("login.html");
+															window.location.replace("index.html");
 														}
 													});
 												}
