The Little Library 1.2, Connection bug fix, updated JQM (1.0) and Jquery (1.6.4), larger notes textbox, updated UI, automatically makes index.html files home page, ability to upload multiple files at once
Signed-off-by: Bob Wadholm <rwadholm@indiana.edu>

--- a/settings.html
+++ b/settings.html
@@ -52,7 +52,7 @@
             <div data-role="fieldcontain">
             	<label for="upload" id="uploadLabel" class="fileLabel" style="width: 20%; display: inline-block; margin: 0 2% 0 0;">File</label>
                 <!--<button id="upload" name="upload" data-inline="true">Upload New File</button>-->
-                <input type="file" name="_attachments" id="_attachments" />
+                <input type="file" name="_attachments" id="_attachments" multiple="multiple" />
             </div>
             
             <div data-role="fieldcontain" class="finalField">
