LL 1.3: HTML item wrapper, ability to delete language files, ability to view and sync from all online libraries (including single items), ability to change the category of single items, fixed some language file issues, created a LL favicon.
Signed-off-by: Bob Wadholm <rwadholm@indiana.edu>

--- a/library.html
+++ b/library.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The Little Library</title>
+<link rel="icon" type="image/png" href="../../_design/takeout-settings.jnlp/icon.png" />
 <link rel="stylesheet" href="jqm.css" />
 <script type="text/javascript" src="json2.js"></script>
 <script type="text/javascript" src="sha1.js"></script>
@@ -47,7 +48,7 @@
 						
 						$('a.addFile').attr({'href': 'settings.html?id=add&type='+ itemType});
 						
-						$('ul.listedItems').listShow(itemType);
+						$('ul.listedItems').listShow(itemType, '/'+ homeURL, true);
 						$('ul.listedItems li').fadeIn();
 					};
 					$.mobile.hidePageLoadingMsg(); 
